# dns-server-rust-practice

./: .gitignore  Cargo.toml  README.md
res/: query_packet.txt  response_packet.txt
src/: dns.rs  lib.rs  main.rs  parser.rs
src/dns/: mod.rs  parser.rs
